[gd_scene load_steps=2 format=2]

[ext_resource path="res://autoload/network.gd" type="Script" id=1]

[node name="Network" type="Node2D"]
script = ExtResource( 1 )

[node name="HTTPRequest" type="HTTPRequest" parent="."]
use_threads = true

[node name="DownloadReq" type="HTTPRequest" parent="."]
use_threads = true

[connection signal="request_completed" from="HTTPRequest" to="." method="_on_HTTPRequest_request_completed"]
[connection signal="request_completed" from="DownloadReq" to="." method="_on_DownloadReq_request_completed"]
